# sat-vision

./: .gitignore  README.md  docker-compose.yml  plan.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: imagery.py  orbit.py
backend/app/services/: propagator.py  stac.py  tle.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AcquisitionMarkers.ts  DashboardHUD.tsx  Globe.tsx  ImagePanel.tsx  ImageryDraper.ts  OrbitRenderer.ts
frontend/src/hooks/: useAcquisitions.ts  useOrbit.ts
frontend/src/services/: api.ts
