[project]
name = "sat-vision-backend"
version = "0.1.0"
description = "Sat-Vision backend — orbital mechanics + EO imagery API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sgp4>=2.23",
    "pystac-client>=0.8.0",
    "planetary-computer>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
